2007-12-26  Stephen J. Turnbull  <stephen@xemacs.org>

	* Makefile.in.in (mkpkgdir): Ensure only one late package directory.

2007-12-26  Stephen J. Turnbull  <stephen@xemacs.org>

	* Makefile.in.in (check-available-packages): Say where to install.
	(mkpkgdir): 

2007-12-23  Stephen J. Turnbull  <stephen@xemacs.org>

	* Makefile.in.in (mkpkgdir):
	(check-available-packages):
	(install-bootstrap-packages):
	(install-nonmule-packages):
	(install-all-packages):
	New targets supporting bundled packages.

	* .hgignore: Ignore tarballs in etc/bundled-packages/.

2007-12-08  Jerry James  <james@xemacs.org>

	* config.guess:
	* config.sub: Sync with the latest upstream versions.

2007-12-12  Aidan Kehoe  <kehoea@parhasard.net>

	* configure.ac :
	Check for FcConfigGetRescanInterval, FcConfigSetRescanInterval.
	* configure :
	Rebuild.

2007-08-27  Mike Sperber  <mike@xemacs.org>

	* configure.ac: Try to use pkg-config for finding Xft includes and
	libraries.  If that fails, search also in /usr/local.

2007-08-12  Mike Sperber  <mike@xemacs.org>

	* Makefile.in.in (datarootdir): Add.
	* configure.ac (infodir): Now in terms of $(datarootdir).
	(mandir): Ditto, making it usually point to $(prefix)/share/man,
	conformant with the GNU Coding Standards.

2007-07-31  Mike Sperber  <mike@xemacs.org>

	* configure.ac: Don't divert `share' to `lib' for datadir.
	Also, define AC_DATAROOTDIR_CHECKED to shut up autoconf.

2007-05-21  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.28 "fuki" is released.

2007-05-18  Stephen J. Turnbull  <stephen@xemacs.org>

	* configure.ac (error-checking): Move comma misplaced by sorting.
	* configure: Regenerate.

2007-05-18  Stephen J. Turnbull  <stephen@xemacs.org>

	* configure.ac (error-checking): Reorder arguments and sync doctring.

2007-03-14  Stephen J. Turnbull  <stephen@xemacs.org>

	* PROBLEMS: describe crash when inserting or displaying a TAB.
	Thanks to Aidan Kehoe for the diagnosis.
