@@ -1,3 +1,7 @@
+2008-01-01  Stephen J. Turnbull  <stephen@xemacs.org>
+
+	* Makefile.in.in (mkpkgdir): Fix incorrect comment convention.
+
 2007-12-26  Stephen J. Turnbull  <stephen@xemacs.org>
 
 	* Makefile.in.in (mkpkgdir): Ensure only one late package directory.
